crates/character/src/background/snapshots/character__background__knight_of_the_order__tests__bonds.snap
---
source: crates/character/src/background/knight_of_the_order.rs
expression: background.bonds()

---
- I would still lay down my life for the people I served with.
- "Someone saved my life on the battlefield. To this day, I will never leave a friend behind."
- My honor is my life.
- "I'll never forget the crushing defeat my company suffered or the enemies who dealt it."
- Those who fight beside me are those worth dying for.
- I fight for those who cannot fight for themselves.

