crates/character/src/background/snapshots/character__background__knight_of_the_order__tests__flaws.snap
---
source: crates/character/src/background/knight_of_the_order.rs
expression: background.flaws()

---
- The monstrous enemy we faced in battle still leaves me quivering with fear.
- I have little respect for anyone who is not a proven warrior.
- "I made a terrible mistake in battle that cost many lives, and I would do anything to keep that mistake secret."
- My hatred of my enemies is blind and unreasoning.
- "I obey the law, even if the law causes misery."
- "I'd rather eat my armor than admit when I'm wrong."

