crates/character/src/background/snapshots/character__background__knight_of_the_order__tests__skills.snap
---
source: crates/character/src/background/knight_of_the_order.rs
expression: "KnightOfTheOrder::skills()"

---
- Persuasion
- Arcana
- History
- Nature
- Religion

