crates/character/src/background/snapshots/character__background__knight_of_the_order__tests__snapshot.snap
---
source: crates/character/src/background/knight_of_the_order.rs
expression: background

---
type: KnightOfTheOrder
knightly_order: Shield

