crates/character/src/background/snapshots/character__background__knight_of_the_order__tests__snapshot_addl_equipment.snap
---
source: crates/character/src/background/knight_of_the_order.rs
expression: background.addl_equipment()

---
- From:
    - Other: a signet representing your place or rank in the order
    - Other: a banner representing your place or rank in the order
    - Other: a seal representing your place or rank in the order

