crates/character/src/background/snapshots/character__background__knight_of_the_order__tests__snapshot_addl_proficiencies.snap
---
source: crates/character/src/background/knight_of_the_order.rs
expression: background.addl_proficiencies()

---
- Skill:
    - - Arcana
      - History
      - Nature
      - Religion
    - 1
- FromOptions:
    - - GamingSet
      - MusicalInstrument
    - 1

