crates/character/src/background/snapshots/character__background__knight_of_the_order__tests__snapshot_citations.snap
---
source: character/src/background/knight_of_the_order.rs
expression: background.citations()

---
- - Scag
  - 151

