crates/character/src/background/snapshots/character__background__knight_of_the_order__tests__snapshot_display.snap
---
source: crates/character/src/background/knight_of_the_order.rs
expression: background

---
Knight of the Order
