crates/character/src/background/snapshots/character__background__knight_of_the_order__tests__snapshot_equipment.snap
---
source: crates/character/src/background/knight_of_the_order.rs
expression: background.equipment()

---
- Gear:
    Other: ClothesTravelers
- Gear:
    Other: Pouch

